/*
 * Teleport
 * Copyright (C) 2023  Gravitational, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

// TODO(ravicious): Before introducing any changes, move this file to the /proto dir and
// remove the generate-grpc-shared script.

syntax = "proto3";

import "google/protobuf/struct.proto";

service PtyHost {
  rpc CreatePtyProcess(PtyCreate) returns (PtyId) {}
  rpc ExchangeEvents(stream PtyClientEvent) returns (stream PtyServerEvent) {}
  rpc GetCwd(PtyId) returns (PtyCwd) {}
}

message PtyId {
  string id = 1;
}

message PtyCreate {
  string path = 3;
  repeated string args = 4;
  string cwd = 5;
  reserved 6;
  reserved "init_command";
  google.protobuf.Struct env = 7;
  string init_message = 8;
  bool use_conpty = 9;
}

message PtyClientEvent {
  oneof event {
    PtyEventStart start = 2;
    PtyEventResize resize = 3;
    PtyEventData data = 4;
  }
}

message PtyServerEvent {
  oneof event {
    PtyEventResize resize = 1;
    PtyEventData data = 2;
    PtyEventOpen open = 3;
    PtyEventExit exit = 4;
    PtyEventStartError start_error = 5;
  }
}

message PtyEventStart {
  uint32 columns = 2;
  uint32 rows = 3;
}

message PtyEventData {
  string message = 2;
}

message PtyEventResize {
  uint32 columns = 2;
  uint32 rows = 3;
}

message PtyEventOpen {}

message PtyEventExit {
  uint32 exit_code = 1;
  optional uint32 signal = 2;
}

message PtyEventStartError {
  string message = 1;
}

message PtyCwd {
  string cwd = 1;
}

